--- a/index.html
+++ b/index.html
@@ -1,75 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planer</title>
+    <title>Exoplanet Transit Planer</title>
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet"> -->
-
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="stylization.css">
+    
     <link rel="icon" type="image/x-icon" href="icon.svg">
 
-
+    
     <script type="text/javascript">
-		function setPhase(phase) {
-			let shadowArc = document.getElementById('shadowArc');
-			let shadowRect = document.getElementById('shadowRect');
-            var width = 40*Math.cos(phase*3.1415*2);
-            if(phase > 0.75){
-                width *= -1;
-				shadowRect.setAttribute("x", "30");
-				shadowArc.setAttribute("fill", "grey");
-            } else if(phase > 0.5){
-				shadowRect.setAttribute("x", "30");
-                width *= -1;
-				shadowArc.setAttribute("fill", "white");
-			} else if(phase > 0.25){
-				shadowRect.setAttribute("x", "0");
-				shadowArc.setAttribute("fill", "white");
-			} else{
-				shadowRect.setAttribute("x", "0");
-				shadowArc.setAttribute("fill", "grey");
-			}
-            shadowArc.setAttribute("d", "M 30 0 V 60 C " + (30 + width) + " 60 " + (30 + width) + " 0 30 0");
-		}
-	</script>
-</head>
-<body>
-    <p id="Title">
-        Sunset: 2023-04-16 15:05, sunrise:2023-04-17 00:53<br>TESS transits with depth>7.0mmag and Vmag<14.0
-    </p>
-    <p id="moonInfo">Moon phase is 17% 
-        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14"  viewBox="0 0 60 60" >
-            <defs>
-                <radialGradient id="RadialGrad" fx="50%" fy="50%" r="65%" spreadMethod="pad">
-                    <stop offset="0%"   stop-color="#E7D68C" stop-opacity="1"/>
-                    <stop offset="100%" stop-color="#FFFEED" stop-opacity="1" />
-                </radialGradient>
-            </defs>
-            <!-- <rect width="100%" height="100%" /> -->
-            <circle cx="30" cy="30" r="30" />
-
-            <mask id="shadowMask">
-                <rect x="0" y="0" width="100" height="100" fill="white" />
-                <rect id="shadowRect" x="0" y="0" width="30" height="60" fill="grey"/>
-                <path id="shadowArc" d="M 30 0 V 60 C 70 60 70 0 30 0" fill="grey" />
-            </mask>
-            <circle cx="30" cy="30" r="30" stroke="black"  fill="url(#RadialGrad)" mask="url(#shadowMask)"/>
-	    </svg>
-    </p>
-    <img id="PlanPlot" src="PlanPlot.svg">
-
-    <div id="tableWrapper">
-        <table><tr><th>Target</th><th>Coord</th><th>Start(UTC)</th><th>Duration(h)</th><th>Depth(mmag)</th><th>Vmag</th><th>Exp(s)</th><th>2Moon(d)</th><th>Priority</th></tr><tr><th><a class="targetName" href="comments.html?com=VPC-+VPC-+qlp-s48-tois+Sectors%3A%5B15%2C+21%2C+22%2C+41%2C+48%5D%3A+%5BP%3D2.5227910%5D+Same+signal+as+3885.01%2C+which+is+apparently+a+phantom%2C+so+it+has+been+retired+as+an+FA.+found+in+faint-star+QLP+search%3B+Allyson+Bieryla%2FKeplerCam+observed+a+full+on+20211228+in+ip+and+detected+a+23+min+%287.8%29+late+14.3+ppt+event+using+a+contaminated+%28T2%2C+2%22%2C+dmag%3D0.023%29+4.7%22+target+aperture.+%5BP%3D2.522854%5D+Daphne+Zakarian%2F+Lowell+Observatory+observed+a+full+on+20221121+in+rp+and+detected+an+~on-time+~23+ppt+event+in+a+contaminated+target+aperture.+The+next+observation+should+be+a+focused+high+precision+%28%3C1.0+ppt%2F5+min%29+full+transit+in+a+red+%28r%27%2C+R%2C+i%27%2C+I%2C+z%29+filter+to+separate+the+2.2%22+W+neighbor+and+determine+the+source+of+the+event.&targ=TIC950525831_01">TIC950525831_01</a></th><th>12:01:02.20 +55:50:46.89</th><th>2023-04-16 17:17:35</th><th>3.65</th><th>23.3</th><th>13.1</th><th>180</th><th>133.54</th><th>1</th></tr><tr><th><a class="targetName" href="comments.html?com=VPC%2B+VPC%2B+qlp-s48-tois+Sectors%3A%5B14%2C+20%2C+21%2C+41%2C+47%2C+48%5D%3A+%5BP%3D3.2692830%5D+found+in+faint-star+QLP+search%3B+Confirm+event+on+target+and%2For+check+field+for+NEBs+within+2.5%27+using+a+red+%28rp%2C+R%2C+ip%2C+I%2C+z%29+filter.+Ferran+Grau%2FCALOU-0m4+analyzed+a+full+on+20220123+in+R+and+detected+a+31+min+%283.1%29+late+10.3+ppt+event+using+an+uncontaminated+4.4%22+target+aperture.+%5BP%3D3.269381%5D+Roberto+Zambelli%2FCMO-0.30m+observed+an+ingress+%28e-230%2B70+min%3B+-%2F%2B%29+on+20220228+in+R+and+maybe+detected+an+ingress.+AdamP%2FSUTO-UZPW50-0m5+observed+a+full+on+20220606+in+B+and+detected+a+~10+ppt+transit+using+a+7.1%22+target+aperture.+Ferran+Grau%2FCALOU-0m4+analyzed+a+nominal+full+on+20211231+in+R+and+detected+an+~on-time+7-10+ppt+full+using+an+uncontaminated+4.4%22+target+aperture.+No+more+observations+needed%2C+except+for+%2A%2Afull-only%2A%2A+multi-band+or+alternating+filter+high+precision+%28%3C1.0+ppt%2F5+min%29+data+in+at+least+blue+%28U%2C+u%27%2C+B%2C+g%27%29+%2Aand%2A+red+%28i%27%2C+I%2C+z%2C+Y%29+filters+to+refine+the+check+on+chromaticity.&targ=TIC142562395_01">TIC142562395_01</a></th><th>11:01:05.63 +73:04:05.65</th><th>2023-04-16 19:20:51</th><th>3.5</th><th>11.8</th><th>13.8</th><th>180</th><th>117.4</th><th>2</th></tr><tr><th><a class="targetName" href="comments.html?com=VPC+VPC+qlp-s49-tois+Sectors%3A%5B14%2C+15%2C+21%2C+22%2C+41%2C+47%2C+48%2C+49%5D%3A+V-shaped%3B+found+in+faint-star+QLP+search%3B+Allyson+Bieryla%2FKeplerCam+observed+a+full+on+20220208+in+ip+and+detected+an+~on-time+9+ppt+event+using+an+uncontaminated+4.7%22+target+aperture.+PC+%3D%3E+VPC+No+more+observations+needed%2C+except+for+a+high+precision+%28%3C1.0+ppt%2F5+min%29+full+transit+in+a+blue+%28U%2C+u%27%2C+B%2C+g%27%29+filter+to+check+chromaticity.+Multi-band+observations+preferred.&targ=TIC154126149_01">TIC154126149_01</a></th><th>14:09:58.53 +70:03:55.75</th><th>2023-04-16 17:56:45</th><th>2.85</th><th>9.8</th><th>13.1</th><th>180</th><th>113.83</th><th>3</th></tr><tr><th><a class="targetName" href="comments.html?com=PC+PC+qlp-s47-tois+Sectors%3A%5B20%2C+47%5D%3A+%5BP%3D5.6124370%5D+found+in+faint-star+QLP+search%3B+Allyson+Bieryla%2FKeplerCam+observed+a+full+%28e-257%2Fi%2B298+min%3A+e-0.9%2Fi%2B1.1%29+on+20220226+in+ip+and+ruled+out+the+9.5+ppt+event+on+target+with+an+uncontaminated+aperture+and+cleared+21%2F21+neighbors+over+the+window.+AIJ+s20+%2B+s47+analysis+shows+that+the+event+occurred+about+700+mins+%282.5%29+early%2C+so+the+egress+occurred+before+these+observations+started.+%5BP%3D5.6089170%5D+Confirm+event+on+target+and%2For+check+field+for+NEBs+within+2.5%27+using+a+red+%28rp%2C+R%2C+ip%2C+I%2C+z%29+filter.&targ=TIC53307409_01">TIC53307409_01</a></th><th>07:47:04.09 +56:47:00.39</th><th>2023-04-16 17:10:32</th><th>4.4</th><th>8.3</th><th>13.8</th><th>180</th><th>121.14</th><th>4</th></tr></table>
-    </div>
-
-
-    <script>
-        setPhase(0.8746439646833983)
+      function setPhase(phase) {
+        let shadowArc = document.getElementById('shadowArc');
+        let shadowRect = document.getElementById('shadowRect');
+              var width = 40*Math.cos(phase*3.1415*2);
+              if(phase > 0.75){
+                  width *= -1;
+          shadowRect.setAttribute("x", "30");
+          shadowArc.setAttribute("fill", "grey");
+              } else if(phase > 0.5){
+          shadowRect.setAttribute("x", "30");
+                  width *= -1;
+          shadowArc.setAttribute("fill", "white");
+        } else if(phase > 0.25){
+          shadowRect.setAttribute("x", "0");
+          shadowArc.setAttribute("fill", "white");
+        } else{
+          shadowRect.setAttribute("x", "0");
+          shadowArc.setAttribute("fill", "grey");
+        }
+              shadowArc.setAttribute("d", "M 30 0 V 60 C " + (30 + width) + " 60 " + (30 + width) + " 0 30 0");
+      }
     </script>
+  </head>
+ <body>
+  <h1>
+      <p class="tekst" ><b>EXOPLANET TRANSIT PLANNER</b></p>
+  </h1>
+
+  <h2>
+    <p id="Title">
+      Sunset: 2023-05-06 15:47, sunrise:2023-05-07 00:05<br>TESS transits with depth>7.0mmag and Vmag<14.0
+    </p>
+    <p id="moonInfo">Moon phase is 99% 
+      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="14" height="14"  viewBox="0 0 60 60" >
+          <defs>
+              <radialGradient id="RadialGrad" fx="50%" fy="50%" r="65%" spreadMethod="pad">
+                  <stop offset="0%"   stop-color="#E7D68C" stop-opacity="1"/>
+                  <stop offset="100%" stop-color="#FFFEED" stop-opacity="1" />
+              </radialGradient>
+          </defs>
+          <!-- <rect width="100%" height="100%" /> -->
+          <circle cx="30" cy="30" r="30" />
+
+          <mask id="shadowMask">
+              <rect x="0" y="0" width="100" height="100" fill="white" />
+              <rect id="shadowRect" x="0" y="0" width="30" height="60" fill="grey"/>
+              <path id="shadowArc" d="M 30 0 V 60 C 70 60 70 0 30 0" fill="grey" />
+          </mask>
+          <circle cx="30" cy="30" r="30" stroke="black"  fill="url(#RadialGrad)" mask="url(#shadowMask)"/>
+      </svg>
+    </p>
+  </h2>
+
+  <p class="img" align="middle">
+    <img id="PlanLegend" src="PlanLegend.svg">
+  </p>
+
+  <p class="img" align="middle">
+    <img id="PlanPlot" src="PlanPlot.svg">
+  </p>
+
+  <div id="tableWrapper" >
+    <p id='noTargets'>No targets to observe</p>
+  </div>
+
+
+  <script>
+      setPhase(0.5426344025017523)
+  </script>
 </body>
-</html>
+<footer>
+  <p class="by">by Anna Azheganova, Ural Federal University, Institute of Natural Sciences and Mathematics  </p>
+</footer>
+  
