--- a/pageTemplate.html
+++ b/pageTemplate.html
@@ -82,6 +82,6 @@
   </script>
 </body>
 <footer>
-  <p class="by">by Anna Azheganova, Ural Federal University, Institute of Natural Sciences and Mathematics  </p>
+  <p class="by">by Nikita Feoktistov and Anna Azheganova, Ural Federal University, Institute of Natural Sciences and Mathematics  </p>
 </footer>
   
